first code java

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>새로운 문자열</p>
 <p>새로운 문자열22</p>
+<div><img src="hellogit"alt = "Hello World"></div>div>
 </body>
 </html>
